# GSPL-Sprites

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  COMPLETION_MATRIX.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY.md
.github/workflows/: ci.yml
docs/: ANIMATION_3D_ARCHITECTURE.md  ANIMATION_ARCHITECTURE.md  ASSET_GRAPH_SPECIFICATION.md  AUTHORING_CLI.md  AUTHORING_PERSISTENCE.md  AUTHORING_PROJECT_ARCHITECTURE.md  AUTHORING_REFERENCES_AND_TARGETS.md  CHANNEL_MAP_ARCHITECTURE.md  COMBAT_RUNTIME_ARCHITECTURE.md  COMBO_RUNTIME_ARCHITECTURE.md  DEFORMATION_QUALITY_ARCHITECTURE.md  GLB_EXPORT_ARCHITECTURE.md  GODOT_TARGET_ARCHITECTURE.md  IMAGE_AND_ATLAS_ARCHITECTURE.md  IMPLEMENTATION_ROADMAP.md  INFERENCE_PROVIDER_ARCHITECTURE.md  JOB_SYSTEM_ARCHITECTURE.md  LIVING_RUNTIME_ARCHITECTURE.md  LOD_QUALITY_ARCHITECTURE.md  MESH_QUALITY_ARCHITECTURE.md  MODEL_STRATEGY.md  PROJECTION_25D_ARCHITECTURE.md  PROJECTION_2D_CONTRACT.md  PROJECTION_3D_ARCHITECTURE.md  RESEARCH_DECISIONS.md  RIGHTS_AND_PROVENANCE.md  RUNTIME_25D_ARCHITECTURE.md  RUNTIME_EVENT_ROUTING.md  RUNTIME_PERSISTENCE_AND_REPLAY.md  SPRITE_2D_ARCHITECTURE.md  SPRITE_GENE_SPECIFICATION.md  SPRITE_PACKAGE_SPECIFICATION.md  SPRITE_SEED_SPECIFICATION.md  SYSTEM_ARCHITECTURE.md  TARGET_CONTRACT_ARCHITECTURE.md  TARGET_SOURCE_EVIDENCE.md  TRANSFORMATION_RUNTIME_ARCHITECTURE.md  VISUAL_SET_SPECIFICATION.md
docs/decisions/: ADR-0001-typed-sprite-genes.md  ADR-0002-content-addressed-asset-graph.md  ADR-0003-image-color-atlas.md  ADR-0004-semantic-animation-runtime.md  ADR-0005-model-registry.md  ADR-0006-bounded-job-system.md  ADR-0007-governed-onnx-cpu-provider.md  ADR-0008-deterministic-2d-passes.md  ADR-0009-typed-channel-maps.md  ADR-0010-deterministic-living-runtime.md  ADR-0011-canonical-runtime-replay.md  ADR-0012-semantic-runtime-event-routing.md  ADR-0013-transactional-runtime-consumers.md  ADR-0014-first-class-25d-projection.md  ADR-0015-deterministic-3d-ir.md  ADR-0016-fixed-tick-3d-animation.md  ADR-0017-validated-glb-target.md  ADR-0018-glb-animation-projection.md  ADR-0019-bounded-mesh-quality.md  ADR-0020-sampled-deformation-gate.md  ADR-0021-bounded-lod-correspondence.md  ADR-0022-semantic-25d-runtime.md  ADR-0023-fail-closed-target-contract.md  ADR-0024-transactional-godot-target.md  ADR-0025-revisioned-authoring-project.md  ADR-0026-canonical-authoring-persistence.md  ADR-0027-immutable-authoring-cli.md  ADR-0028-governed-authoring-inputs-targets.md  ADR-0029-verified-target-source-evidence.md  ADR-0030-self-verifying-glb-contract.md  ADR-0031-portable-package-capability-proof.md  ADR-0032-authoritative-runtime-replication.md  ADR-0033-typed-transactional-combat-runtime.md  ADR-0034-acyclic-transactional-combo-graphs.md  ADR-0035-identity-preserving-form-deltas.md  ADR-0036-derived-transformation-manifestations.md  ADR-0037-first-class-compiled-2d-projection.md
docs/studio/: api.md  architecture.md  plugin-dev.md  quickstart.md  theming.md  user-guide.md
examples/: voltfox.sprite  voltfox.visual.txt
examples/blank-workspace/: gspl-project.jsonc
examples/gspl/: minimal.gspl
examples/sprite-kit-workspace/: gspl-project.jsonc
examples/voltfox-workspace/: gspl-project.jsonc
include/gspl/: STABILITY.md  ast.hpp  cache.hpp  cli.hpp  diagnostics.hpp  expressions.hpp  genes.hpp  gspl.hpp  ir.hpp  legacy.hpp  lexer.hpp  lowering.hpp  modules.hpp  parser.hpp  passes.hpp  provider.hpp  sdk.hpp  semantics.hpp  source.hpp  token.hpp  types.hpp  utf8.hpp
include/gspl_sprites/: animation.hpp  animation3d.hpp  authoring.hpp  core.hpp  (+35 more)
src/: animation.cpp  animation3d.cpp  authoring.cpp  authoring_cli.cpp  authoring_io.cpp  cache.cpp  channel_map.cpp  cli.cpp  combat.cpp  combo.cpp  core.cpp  deformation_quality.cpp  diagnostics.cpp  domain.cpp  expressions.cpp  genes.cpp  gltf_export.cpp  gltf_verify.cpp  godot_export.cpp  gsplc_main.cpp  headless_evidence.cpp  image.cpp  image_png.cpp  inference_onnx.cpp  inference_stub.cpp  ir.cpp  jobs.cpp  legacy.cpp  lexer.cpp  living_runtime.cpp  lod_quality.cpp  lowering.cpp  main.cpp  mesh_quality.cpp  model.cpp  modules.cpp  package.cpp  package_semantics.cpp  package_semantics.hpp  parser.cpp  (+24 more)
src/studio/: CMakeLists.txt  document.cpp  environment_provider.cpp  git_integration.cpp  ipc_channel.cpp  ipc_envelope.cpp  logger.cpp  project.cpp  publishing_manager.cpp  shared_memory.cpp  syntax_highlighter.cpp  target_adapter_manager.cpp  theme_manager.cpp  worker_process.cpp  workspace.cpp
src/studio/artifacts/: ArtifactExplorer.qml
src/studio/debugger/: DebuggerPanel.qml
src/studio/git/: GitPanel.qml
src/studio/graph/: GraphEditor.qml
src/studio/preview/: PreviewViewport.qml
src/studio/providers/: ProviderPanel.qml
src/studio/publishing/: PublishWizard.qml
src/studio/replay/: ReplayPanel.qml
src/studio/shell/: AboutDialog.qml  CommandPalette.qml  HealthDashboard.qml  LogViewer.qml  MainWindow.qml  PreferencesDialog.qml  StartupWizard.qml  main.cpp
src/studio/targets/: TargetPanel.qml
src/studio/text/: TextEditor.qml
src/studio/visual/: AnimationEditor.qml  BehaviorEditor.qml  CombatEditor.qml  FormEditor.qml  GeneEditor.qml  MorphologyEditor.qml
tests/: animation3d_tests.cpp  animation_tests.cpp  authoring_cli_tests.cpp  authoring_io_tests.cpp  authoring_tests.cpp  cache_tests.cpp  channel_map_tests.cpp  cli_comprehensive_tests.cpp  cli_tests.cpp  combat_tests.cpp  combo_tests.cpp  core_tests.cpp  deformation_quality_tests.cpp  domain_tests.cpp  entity_identity_tests.cpp  evidence_oracle.json  expression_tests.cpp  frame_distinctness_tests.cpp  fuzz_parsing_tests.cpp  gene_tests.cpp  gltf_export_tests.cpp  godot_export_tests.cpp  gspl_compiler_tests.cpp  header_self_containment_tests.cpp  headless_evidence_tests.cpp  image_tests.cpp  inference_tests.cpp  job_tests.cpp  legacy_tests.cpp  living_combat_wiring_tests.cpp  living_runtime_tests.cpp  lod_quality_tests.cpp  mesh_quality_tests.cpp  model_tests.cpp  module_tests.cpp  mutation_tests.cpp  package_tests.cpp  projection25d_tests.cpp  projection2d_tests.cpp  projection3d_tests.cpp  (+22 more)
(+159 files in other folders)
